gcc/ChangeLog: PR debug/41295 * reload1.c (reload): Reset debug insns with pseudos without equivalences. gcc/testsuite/ChangeLog: PR debug/41295 * gcc.dg/pr41295.c: New.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@152040 138bc75d-0d04-0410-961f-82ee72b054a4